# pacman

./: Architektur.txt  CMakeLists.txt  ConsoleWindow.cpp  ConsoleWindow.h  README.md  characters.cpp  characters.h  main.cpp  pacman.cpp  pacman.h
copyme/: testsmall.txt  testverysmall.txt
